--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Lucky Shrub" />
-    <meta property="og:description" content="Gardening design company, aiming for your comfort"/>
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/941095160517894185/1053729046183288922/Desktop_-_2.png" />
-    <meta property="og:image:alt" content="Lucky Shrub Marketplace" />
+    <meta property="twitter:title" content="Lucky Shrub" />
+    <meta property="twitter:description" content="Gardening design company, aiming for your comfort"/>
+    <meta property="twitter:image:src" content="https://cdn.discordapp.com/attachments/941095160517894185/1053729046183288922/Desktop_-_2.png" />
+    <meta property="twitter:image:alt" content="Lucky Shrub Marketplace" />
     
     <link rel="stylesheet" href="./styles/styles.css">
     <title>Garden</title>
