--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="twitter:title" content="Lucky Shrub" />
-    <meta property="twitter:description" content="Gardening design company, aiming for your comfort"/>
-    <meta property="twitter:image:src" content="https://cdn.discordapp.com/attachments/941095160517894185/1053729046183288922/Desktop_-_2.png" />
-    <meta property="twitter:image:alt" content="Lucky Shrub Marketplace" />
-    
     <link rel="stylesheet" href="./styles/styles.css">
     <title>Garden</title>
     <link rel="icon" type="image/x-icon" href="./logo/Lucky-Shrub-logos/Asset 1@3x.png">
+    <title>Garden</title>
+    <meta name="description" content="Gardening design company, aiming for your comfort.">
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://lucky-shrub-website.vercel.app/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Garden">
+    <meta property="og:description" content="Gardening design company, aiming for your comfort.">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/941095160517894185/1053729046183288922/Desktop_-_2.png">
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="lucky-shrub-website.vercel.app">
+    <meta property="twitter:url" content="https://lucky-shrub-website.vercel.app/">
+    <meta name="twitter:title" content="Garden">
+    <meta name="twitter:description" content="Gardening design company, aiming for your comfort.">
+    <meta name="twitter:image" content="https://cdn.discordapp.com/attachments/941095160517894185/1053729046183288922/Desktop_-_2.png">
 </head>
 
 <body>
