updating html file

--- a/index.html
+++ b/index.html
@@ -8,38 +8,25 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <title>Garden</title>
     <link rel="icon" type="image/x-icon" href="./logo/Lucky-Shrub-logos/Asset 1@3x.png">
-    <title>Garden</title>
-    <meta name="description" content="Gardening design company, aiming for your comfort.">
-    <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://lucky-shrub-website.vercel.app/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Garden">
-    <meta property="og:description" content="Gardening design company, aiming for your comfort.">
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/941095160517894185/1053729046183288922/Desktop_-_2.png">
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="lucky-shrub-website.vercel.app">
-    <meta property="twitter:url" content="https://lucky-shrub-website.vercel.app/">
-    <meta name="twitter:title" content="Garden">
-    <meta name="twitter:description" content="Gardening design company, aiming for your comfort.">
-    <meta name="twitter:image" content="https://cdn.discordapp.com/attachments/941095160517894185/1053729046183288922/Desktop_-_2.png">
 </head>
 
 <body>
-    <!-- Header -->
-    <header>
-        <img src="./logo/Lucky-Shrub-logos/Asset 3@3x.png">
-    </header>
+    <div class="cont-nav">
+        <!-- Header -->
+        <header>
+            <img src="./logo/Lucky-Shrub-logos/Asset 3@3x.png">
+        </header>
 
-    <!-- Navbar -->
-    <nav class="navbar">
-        <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./Plan.html">New Plans</a></li>
-            <li><a href="./Founders.html">Founders</a></li>
-            <li><a href="./Connect.html">Connect</a></li>
-        </ul>
-    </nav>
+        <!-- Navbar -->
+        <nav class="navbar">
+            <ul>
+                <li><a class="nav-text" href="./index.html">Home</a></li>
+                <li><a class="nav-text" href="./Plan.html">New Plans</a></li>
+                <li><a class="nav-text" href="./Founders.html">Founders</a></li>
+                <li><a class="nav-text" href="./Connect.html">Connect</a></li>
+            </ul>
+        </nav>
+    </div>
 
     <!-- Main  -->
     <main>
@@ -72,26 +59,28 @@
         </selector>
 
         <!-- Articles -->
-        <article class="article1">
-            <div class="photo-1"></div>
-            <div class="info--1">
-                <h2>2022 Deal</h2>
-                <p>Started serving the confortability of our clients since 2018. After years of experience dealing with customers, we are here to bring a bigger innovation to the gardening field.<br>We are thrilled to offially reveal our new plans for Q1
-                    2023, that will containe new plants, design structures, everything new for YOU to enjoy!!<br>Our loyal members deserve the best.
-                </p>
-                <button>MORE INFO</button>
-            </div>
-        </article>
-        <article class="article2">
-            <div class="info--2">
-                <h2>More than Plants</h2>
-                <p>We are investing more not just into gardening but also the confort of our cusotmer by offering tools you can place at your backyard, or inside home.<br>Chairs, couches, accessories, everything available inside our shop, you can buy from
-                    our online shop vie website, or visite our real life stores!!<br>We can't wait to see you at your best confort.
-                </p>
-                <button>MORE INFO</button>
-            </div>
-            <div class="photo-2"></div>
-        </article>
+        <div class="articls">
+            <article class="article1">
+                <div class="photo-1"></div>
+                <div class="info--1">
+                    <h2>2022 Deal</h2>
+                    <p>Started serving the confortability of our clients since 2018. After years of experience dealing with customers, we are here to bring a bigger innovation to the gardening field.<br>We are thrilled to offially reveal our new plans for
+                        Q1 2023, that will containe new plants, design structures, everything new for YOU to enjoy!!<br>Our loyal members deserve the best.
+                    </p>
+                    <button>MORE INFO</button>
+                </div>
+            </article>
+            <article class="article2">
+                <div class="info--2">
+                    <h2>More than Plants</h2>
+                    <p>We are investing more not just into gardening but also the confort of our cusotmer by offering tools you can place at your backyard, or inside home.<br>Chairs, couches, accessories, everything available inside our shop, you can buy
+                        from our online shop vie website, or visite our real life stores!!<br>We can't wait to see you at your best confort.
+                    </p>
+                    <button>MORE INFO</button>
+                </div>
+                <div class="photo-2"></div>
+            </article>
+        </div>
     </main>
 
     <!-- Footer -->
