--- a/index.html
+++ b/index.html
@@ -36,21 +36,24 @@
             <div class="carousel">
                 <div class="carousel__item">
                     <div class="info">
-                        <img class="image1" src="https://cdn.discordapp.com/attachments/941095160517894185/1051511256932163684/wallpaperflare.com_wallpaper_1.jpg">
+                        <!-- <img class="image1" src="https://cdn.discordapp.com/attachments/941095160517894185/1051511256932163684/wallpaperflare.com_wallpaper_1.jpg"> -->
+                        <div class="image1 first"></div>
                         <h1>Confort</h1>
                         <p>Whether inside your home or workplace,<br> become free</p>
                     </div>
                 </div>
                 <div class="carousel__item">
                     <div class="info">
-                        <img class="image1" src="https://cdn.discordapp.com/attachments/941095160517894185/1051538414085865502/wallpaperflare.com_wallpaper.jpg">
+                        <!-- <img class="image1" src="https://cdn.discordapp.com/attachments/941095160517894185/1051538414085865502/wallpaperflare.com_wallpaper.jpg"> -->
+                        <div class="image1 second"></div>
                         <h1>Nature</h1>
                         <p>Show me your backyard, I know who you are.<br>Never <a>hesitate</a> to make it better again</p>
                     </div>
                 </div>
                 <div class="carousel__item">
                     <div class="info">
-                        <img class="image1" src="https://cdn.discordapp.com/attachments/941095160517894185/1052205906202472468/wallpaperflare.com_wallpaper.jpg">
+                        <!-- <img class="image1" src="https://cdn.discordapp.com/attachments/941095160517894185/1052205906202472468/wallpaperflare.com_wallpaper.jpg"> -->
+                        <div class="image1 third"></div>
                         <h1>History</h1>
                         <p>We bring people opportunity to enjoy the<br>precious gardening style of middle era.</p>
                     </div>
