--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 <body>
     <div class="cont-nav">
         <!-- Header -->
-        <header>
-            <img src="./logo/Lucky-Shrub-logos/Asset 3@3x.png">
-        </header>
+        <header></header>
 
         <!-- Navbar -->
         <nav class="navbar">
