--- a/Plan.html
+++ b/Plan.html
@@ -13,64 +13,94 @@
 </head>
 
 <body>
-    <!-- Header -->
-    <header>
-        <img src="./logo/Lucky-Shrub-logos/Asset 3@3x.png">
-    </header>
+    <div class="cont-nav">
+        <!-- Header -->
+        <header>
+            <!-- <img src="./logo/Lucky-Shrub-logos/Asset 3@3x.png"> -->
+        </header>
 
-    <!-- Navbar -->
-    <nav class="navbar">
-        <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./Plan.html">New Plans</a></li>
-            <li><a href="./Founders.html">Founders</a></li>
-            <li><a href="./Connect.html">Connect</a></li>
-        </ul>
-    </nav>
+        <!-- Navbar -->
+        <nav class="navbar">
+            <ul>
+                <li><a class="nav-text" href="./index.html">Home</a></li>
+                <li><a class="nav-text" href="./Plan.html">New Plans</a></li>
+                <li><a class="nav-text" href="./Founders.html">Founders</a></li>
+                <li><a class="nav-text" href="./Connect.html">Connect</a></li>
+            </ul>
+        </nav>
+    </div>
 
     <!-- Main  -->
     <main>
 
-        <div id="weapon"></div>
         <div id="scroll-progress"></div>
-        <section>
-            <div class="q">Q1</div>
-            <div class="q">Q2</div>
-            <div class="q">Q3</div>
-            <div class="q">Q4</div>
+        <div id="scroll-progress-2"></div>
+        <div class="weap">
+            <div id="weapon"></div>
+        </div>
 
-            <h1 class="hidden" data-end="2022">New Plans for </h1>
-            <p class="hidden">Give a new look to your green space with our specialy made garden accessories.</p>
-            <div class="pictures">
-                <img class="info hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1053658728882249848/garden-design-ideas-porcelain-paving-ctd-tiles-rustic-multicolour-slate-a-1623330526.jpg">
-                <img class="info hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1053665611475079269/rhs-hampton-court-palace-flower-show-secured-by-design-garden-1623328436.jpg">
-                <img class="info hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1053676713332178944/garden-design-ideas-antique-stone-trough-ribbon-wheel-garden-by-butter-wakefield-1587235223.jpg">
-                <img class="info hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1053676734513426534/garden-lights-lights4fun-set-of-6-solar-garden-pathway-stake-lights-ss20-29-99-1587253880.jpg">
-            </div>
-        </section>
-        <div class="gapp"></div>
-        <section class="hidden">
-            <p>The lanuch of our online marketplace</p>
-            <div class="top">
-                <img class="info-1 hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1053729046183288922/Desktop_-_2.png">
-                <img class="info-1 hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1053730322824568872/iPhone_13_Pro.png">
-            </div>
-        </section>
-        <div class="gapp"></div>
-        <section class="hidden">
-            <p>The start of constructing shops near your place</p>
-            <img style="transition-delay: 200ms;" width="500" src="https://cdn.discordapp.com/attachments/941095160517894185/1053748312685162597/mKk3aZ3.gif">
-            <!-- <video autoplay src="https://i.imgur.com/mKk3aZ3.gif"></video> -->
+        <div class="cont-plan">
+            <section>
+                <div class="first">
+                    <div class="cont-q">
+                        <div class="q">Q1</div>
+                    </div>
+                    <div class="hidden">
+                        <h1 data-end="2022">New Plans for </h1>
+                        <p>Give a new look to your green space with our specialy made garden accessories.</p>
+                        <div class="pictures">
+                            <img class="info hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1053658728882249848/garden-design-ideas-porcelain-paving-ctd-tiles-rustic-multicolour-slate-a-1623330526.jpg">
+                            <img class="info hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1053665611475079269/rhs-hampton-court-palace-flower-show-secured-by-design-garden-1623328436.jpg">
+                            <img class="info hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1053676713332178944/garden-design-ideas-antique-stone-trough-ribbon-wheel-garden-by-butter-wakefield-1587235223.jpg">
+                            <img class="info hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1053676734513426534/garden-lights-lights4fun-set-of-6-solar-garden-pathway-stake-lights-ss20-29-99-1587253880.jpg">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- <div class="gapp"></div> -->
+            <section>
+                <div class="second">
+                    <div class="cont-q">
+                        <div class="q">Q2</div>
+                    </div>
+                    <div class="hidden">
+                        <p>The lanuch of our online marketplace</p>
+                        <div class="top">
+                            <img class="info-1" src="https://cdn.discordapp.com/attachments/941095160517894185/1053729046183288922/Desktop_-_2.png">
+                            <img class="info-1" src="https://cdn.discordapp.com/attachments/941095160517894185/1053730322824568872/iPhone_13_Pro.png">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- <div class="gapp"></div> -->
+            <section>
+                <div class="third">
+                    <div class="cont-q">
+                        <div class="q">Q3</div>
+                    </div>
+                    <div class="hidden">
+                        <p>The start of constructing shops near your place</p>
+                        <img style="transition-delay: 200ms;" width="500" src="https://cdn.discordapp.com/attachments/941095160517894185/1053748312685162597/mKk3aZ3.gif">
+                        <!-- <video autoplay src="https://i.imgur.com/mKk3aZ3.gif"></video> -->
+                    </div>
+                </div>
+            </section>
+            <!-- <div class="gapp"></div> -->
+            <section>
+                <div class="forth">
+                    <div class="cont-q">
+                        <div class="q">Q4</div>
+                    </div>
 
-        </section>
-        <div class="gapp"></div>
-        <section class="hidden">
-            <p>Real life events in NYC, Miami, Hawai</p>
-            <video style="transition-delay: 200ms;" width="550" height="350" controls>
-            <source src="./images/iPhone 14 Pro _ Cinematic Short Film _ 4K ProRes Footage.mp4">
-          </video>
-        </section>
-
+                    <div class="hidden">
+                        <p>Real life events in NYC, Miami, Hawai</p>
+                        <video style="transition-delay: 200ms;" width="550" height="350" controls>
+                            <source src="./images/iPhone 14 Pro _ Cinematic Short Film _ 4K ProRes Footage.mp4">
+                        </video>
+                    </div>
+                </div>
+            </section>
+        </div>
     </main>
 
     <!-- Footer -->
