--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <div class="cont-nav">
         <!-- Header -->
-        <header></header>
+        <header>
+            <!-- <img src="./logo/Lucky-Shrub-logos/Asset 3@3x.png"> -->
+        </header>
 
         <!-- Navbar -->
         <nav class="navbar">
@@ -35,7 +37,7 @@
                 <div class="carousel__item">
                     <div class="info">
                         <!-- <img class="image1" src="https://cdn.discordapp.com/attachments/941095160517894185/1051511256932163684/wallpaperflare.com_wallpaper_1.jpg"> -->
-                        <div class="image1 first"></div>
+                        <div class="image1 firstt"></div>
                         <h1>Confort</h1>
                         <p>Whether inside your home or workplace,<br> become free</p>
                     </div>
@@ -43,7 +45,7 @@
                 <div class="carousel__item">
                     <div class="info">
                         <!-- <img class="image1" src="https://cdn.discordapp.com/attachments/941095160517894185/1051538414085865502/wallpaperflare.com_wallpaper.jpg"> -->
-                        <div class="image1 second"></div>
+                        <div class="image1 secondd"></div>
                         <h1>Nature</h1>
                         <p>Show me your backyard, I know who you are.<br>Never <a>hesitate</a> to make it better again</p>
                     </div>
@@ -51,7 +53,7 @@
                 <div class="carousel__item">
                     <div class="info">
                         <!-- <img class="image1" src="https://cdn.discordapp.com/attachments/941095160517894185/1052205906202472468/wallpaperflare.com_wallpaper.jpg"> -->
-                        <div class="image1 third"></div>
+                        <div class="image1 thirdd"></div>
                         <h1>History</h1>
                         <p>We bring people opportunity to enjoy the<br>precious gardening style of middle era.</p>
                     </div>
