--- a/Founders.html
+++ b/Founders.html
@@ -6,31 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles4.css">
+
     <title>Garden</title>
     <link rel="icon" type="image/x-icon" href="./logo/Lucky-Shrub-logos/Asset 1@3x.png">
 </head>
 
 <body>
-    <!-- Header -->
-    <header>
-        <img src="./logo/Lucky-Shrub-logos/Asset 3@3x.png">
-    </header>
+    <div class="cont-nav">
+        <!-- Header -->
+        <header>
+            <!-- <img src="./logo/Lucky-Shrub-logos/Asset 3@3x.png"> -->
+        </header>
 
-    <!-- Navbar -->
-    <nav class="navbar">
-        <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./Plan.html">New Plans</a></li>
-            <li><a href="./Founders.html">Founders</a></li>
-            <li><a href="./Connect.html">Connect</a></li>
-        </ul>
-    </nav>
+        <!-- Navbar -->
+        <nav class="navbar">
+            <ul>
+                <li><a class="nav-text" href="./index.html">Home</a></li>
+                <li><a class="nav-text" href="./Plan.html">New Plans</a></li>
+                <li><a class="nav-text" href="./Founders.html">Founders</a></li>
+                <li><a class="nav-text" href="./Connect.html">Connect</a></li>
+            </ul>
+        </nav>
+    </div>
 
     <!-- Main  -->
     <main>
-        <article style="display: flex; align-items:center;justify-content:center; flex-direction: column; padding-bottom: 3rem; margin-top: 5rem;">
-            <img src="./images/wallpaperflare.com_wallpaper (2).jpg" width="890rem">
-            <p style="padding: .2rem 17rem; line-height: 1.5em; font-family: sans-serif; opacity: .8;">Lucky Shrub was started by a husband and wife team, Jason and Maria, who share a long-time love for plants. Jason is the garden architect. He creates and oversees all designs while managing his team of landscapers. Maria manages all the marketing
+        <article class="article-founder">
+            <img src="./images/wallpaperflare.com_wallpaper (2).jpg" width="100%">
+            <p>Lucky Shrub was started by a husband and wife team, Jason and Maria, who share a long-time love for plants. Jason is the garden architect. He creates and oversees all designs while managing his team of landscapers. Maria manages all the marketing
                 for the company and oversees the nursery.<br>Their story is beyound the truth, their first encounter was at Miami restaurent, the two of them didn't have a good day and wanted a cup of tea to releive the stress, but little did they know
                 that sharing the same table and exchanging some words will lead not just to their marriege but also the creationg of this company.<br>Now, they share a one lively house filled with their 3 sons and 4 daughters. These two couple demonstrated
                 how going throw bad events, can lead to this encounter and a happy life next.<br>Lucky Shrub is their own way to connect with more people and send their positive energy to them.<br><i style="background-color: #f9c764;">"Each flower represents a unique feeling and if we undertande flowers enough, we can make them represent us"</i>-JSON,
