--- a/Plan.html
+++ b/Plan.html
@@ -49,10 +49,10 @@
                         <h1 data-end="2022">New Plans for </h1>
                         <p>Give a new look to your green space with our specialy made garden accessories.</p>
                         <div class="pictures">
-                            <img class="info hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1053658728882249848/garden-design-ideas-porcelain-paving-ctd-tiles-rustic-multicolour-slate-a-1623330526.jpg">
-                            <img class="info hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1053665611475079269/rhs-hampton-court-palace-flower-show-secured-by-design-garden-1623328436.jpg">
-                            <img class="info hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1053676713332178944/garden-design-ideas-antique-stone-trough-ribbon-wheel-garden-by-butter-wakefield-1587235223.jpg">
-                            <img class="info hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1053676734513426534/garden-lights-lights4fun-set-of-6-solar-garden-pathway-stake-lights-ss20-29-99-1587253880.jpg">
+                            <img class="info hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1106970370612924476/ezgif.com-gif-maker_2_1.webp">
+                            <img class="info hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1106976074543415356/rhs-hampton-court-palace-flower-show-secured-by-design-garden-1623328436_1.webp">
+                            <img class="info hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1106976587238350959/garden-design-ideas-antique-stone-trough-ribbon-wheel-garden-by-butter-wakefield-1587235223_1.webp">
+                            <img class="info hidden" src="https://cdn.discordapp.com/attachments/941095160517894185/1106976961919729775/garden-lights-lights4fun-set-of-6-solar-garden-pathway-stake-lights-ss20-29-99-1587253880_1.webp">
                         </div>
                     </div>
                 </div>
@@ -66,8 +66,8 @@
                     <div class="hidden">
                         <p>The lanuch of our online marketplace</p>
                         <div class="top">
-                            <img class="info-1" src="https://cdn.discordapp.com/attachments/941095160517894185/1053729046183288922/Desktop_-_2.png">
-                            <img class="info-1" src="https://cdn.discordapp.com/attachments/941095160517894185/1053730322824568872/iPhone_13_Pro.png">
+                            <img class="info-1" src="https://cdn.discordapp.com/attachments/941095160517894185/1106974664904937482/Desktop_-_2_1.webp">
+                            <img class="info-1" src="https://cdn.discordapp.com/attachments/941095160517894185/1106975437437014108/iPhone_13_Pro_1.webp">
                         </div>
                     </div>
                 </div>
