Organize files and docs

--- a/html/Connect.html
+++ b/html/Connect.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="stylesheet" href="./styles3.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/styles3.css">
     <title>Garden</title>
     <link rel="icon" type="image/x-icon" href="./logo/Lucky-Shrub-logos/Asset 1@3x.png">
 </head>
@@ -14,14 +14,12 @@
 <body>
     <div class="cont-nav">
         <!-- Header -->
-        <header>
-            <!-- <img src="./logo/Lucky-Shrub-logos/Asset 3@3x.png"> -->
-        </header>
+        <header></header>
 
         <!-- Navbar -->
         <nav class="navbar">
             <ul>
-                <li><a class="nav-text" href="./index.html">Home</a></li>
+                <li><a class="nav-text" href="../index.html">Home</a></li>
                 <li><a class="nav-text" href="./Plan.html">New Plans</a></li>
                 <li><a class="nav-text" href="./Founders.html">Founders</a></li>
                 <li><a class="nav-text" href="./Connect.html">Connect</a></li>
@@ -34,9 +32,7 @@
     <!-- Main  -->
     <main>
         <!-- Section -->
-        <div class="intro">
-
-        </div>
+        <div class="intro"></div>
         <section>
 
             <h1>Let's Connect</h1>
@@ -91,7 +87,8 @@
         </div>
         <p>© 2022 Hicham ZAADLA. All rights reserved.</p>
     </footer>
-    <script src="./js/script.js"></script>
+
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
