--- a/html/Plan.html
+++ b/html/Plan.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="stylesheet" href="./styles2.css">
-    <script defer src="./app.js"></script>
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/styles2.css">
     <title>Garden</title>
     <link rel="icon" type="image/x-icon" href="./logo/Lucky-Shrub-logos/Asset 1@3x.png">
 </head>
@@ -15,14 +14,12 @@
 <body>
     <div class="cont-nav">
         <!-- Header -->
-        <header>
-            <!-- <img src="./logo/Lucky-Shrub-logos/Asset 3@3x.png"> -->
-        </header>
+        <header></header>
 
         <!-- Navbar -->
         <nav class="navbar">
             <ul>
-                <li><a class="nav-text" href="./index.html">Home</a></li>
+                <li><a class="nav-text" href="../index.html">Home</a></li>
                 <li><a class="nav-text" href="./Plan.html">New Plans</a></li>
                 <li><a class="nav-text" href="./Founders.html">Founders</a></li>
                 <li><a class="nav-text" href="./Connect.html">Connect</a></li>
@@ -57,7 +54,7 @@
                     </div>
                 </div>
             </section>
-            <!-- <div class="gapp"></div> -->
+
             <section>
                 <div class="second">
                     <div class="cont-q">
@@ -72,7 +69,7 @@
                     </div>
                 </div>
             </section>
-            <!-- <div class="gapp"></div> -->
+
             <section>
                 <div class="third">
                     <div class="cont-q">
@@ -85,7 +82,7 @@
                     </div>
                 </div>
             </section>
-            <!-- <div class="gapp"></div> -->
+
             <section>
                 <div class="forth">
                     <div class="cont-q">
@@ -95,7 +92,7 @@
                     <div class="hidden">
                         <p>Real life events in NYC, Miami, Hawai</p>
                         <video style="transition-delay: 200ms;" width="550" height="350" controls>
-                            <source src="./images/iPhone 14 Pro _ Cinematic Short Film _ 4K ProRes Footage.mp4">
+                            <source src="../images/iPhone 14 Pro _ Cinematic Short Film _ 4K ProRes Footage.mp4">
                         </video>
                     </div>
                 </div>
@@ -108,7 +105,6 @@
         <forum>
             <label class="label1" for="femail">Join Our News-Letter</label>
             <input class="input1" type="email" id="femail" value="enter email here" required>
-            <!-- <button type="submit">Join</button> -->
             <input class="input2" type="submit" value="Join">
         </forum>
         <div class="socials">
@@ -117,6 +113,7 @@
         <p>© 2022 Hicham ZAADLA. All rights reserved.</p>
     </footer>
 
+    <script src="../js/plan.js"></script>
 </body>
 
 </html>
