--- a/html/Founders.html
+++ b/html/Founders.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="stylesheet" href="./styles4.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/styles4.css">
 
     <title>Garden</title>
     <link rel="icon" type="image/x-icon" href="./logo/Lucky-Shrub-logos/Asset 1@3x.png">
@@ -15,14 +15,12 @@
 <body>
     <div class="cont-nav">
         <!-- Header -->
-        <header>
-            <!-- <img src="./logo/Lucky-Shrub-logos/Asset 3@3x.png"> -->
-        </header>
+        <header></header>
 
         <!-- Navbar -->
         <nav class="navbar">
             <ul>
-                <li><a class="nav-text" href="./index.html">Home</a></li>
+                <li><a class="nav-text" href="../index.html">Home</a></li>
                 <li><a class="nav-text" href="./Plan.html">New Plans</a></li>
                 <li><a class="nav-text" href="./Founders.html">Founders</a></li>
                 <li><a class="nav-text" href="./Connect.html">Connect</a></li>
@@ -51,7 +49,6 @@
         <forum>
             <label class="label1" for="femail">Join Our News-Letter</label>
             <input class="input1" type="email" id="femail" value="enter email here" required>
-            <!-- <button type="submit">Join</button> -->
             <input class="input2" type="submit" value="Join">
         </forum>
         <div class="socials">
@@ -59,7 +56,8 @@
         </div>
         <p>© 2022 Hicham ZAADLA. All rights reserved.</p>
     </footer>
-    <script src="./js/script.js"></script>
+
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
