--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Garden</title>
     <link rel="icon" type="image/x-icon" href="./logo/Lucky-Shrub-logos/Asset 1@3x.png">
 </head>
@@ -13,17 +13,15 @@
 <body>
     <div class="cont-nav">
         <!-- Header -->
-        <header>
-            <!-- <img src="./logo/Lucky-Shrub-logos/Asset 3@3x.png"> -->
-        </header>
+        <header></header>
 
         <!-- Navbar -->
         <nav class="navbar">
             <ul>
                 <li><a class="nav-text" href="./index.html">Home</a></li>
-                <li><a class="nav-text" href="./Plan.html">New Plans</a></li>
-                <li><a class="nav-text" href="./Founders.html">Founders</a></li>
-                <li><a class="nav-text" href="./Connect.html">Connect</a></li>
+                <li><a class="nav-text" href="./html/Plan.html">New Plans</a></li>
+                <li><a class="nav-text" href="./html/Founders.html">Founders</a></li>
+                <li><a class="nav-text" href="./html/Connect.html">Connect</a></li>
             </ul>
         </nav>
     </div>
@@ -36,7 +34,6 @@
             <div class="carousel">
                 <div class="carousel__item">
                     <div class="info">
-                        <!-- <img class="image1" src="https://cdn.discordapp.com/attachments/941095160517894185/1051511256932163684/wallpaperflare.com_wallpaper_1.jpg"> -->
                         <div class="image1 firstt"></div>
                         <h1>Confort</h1>
                         <p>Whether inside your home or workplace,<br> become free</p>
@@ -44,7 +41,6 @@
                 </div>
                 <div class="carousel__item">
                     <div class="info">
-                        <!-- <img class="image1" src="https://cdn.discordapp.com/attachments/941095160517894185/1051538414085865502/wallpaperflare.com_wallpaper.jpg"> -->
                         <div class="image1 secondd"></div>
                         <h1>Nature</h1>
                         <p>Show me your backyard, I know who you are.<br>Never <a>hesitate</a> to make it better again</p>
@@ -52,7 +48,6 @@
                 </div>
                 <div class="carousel__item">
                     <div class="info">
-                        <!-- <img class="image1" src="https://cdn.discordapp.com/attachments/941095160517894185/1052205906202472468/wallpaperflare.com_wallpaper.jpg"> -->
                         <div class="image1 thirdd"></div>
                         <h1>History</h1>
                         <p>We bring people opportunity to enjoy the<br>precious gardening style of middle era.</p>
@@ -91,7 +86,6 @@
         <forum>
             <label class="label1" for="femail">Join Our News-Letter</label>
             <input class="input1" type="email" id="femail" value="enter email here" required>
-            <!-- <button type="submit">Join</button> -->
             <input class="input2" type="submit" value="Join">
         </forum>
         <div class="socials">
@@ -99,6 +93,7 @@
         </div>
         <p>© 2022 Hicham ZAADLA. All rights reserved.</p>
     </footer>
+
     <script src="./js/script.js"></script>
 </body>
 
