Clean css code and adjust responsivness

--- a/html/Connect.html
+++ b/html/Connect.html
@@ -33,7 +33,7 @@
     <main>
         <!-- Section -->
         <div class="intro"></div>
-        <section>
+        <section class="connect_content">
 
             <h1>Let's Connect</h1>
             <p class="sup">Please fill the form with the necessary info</p>
@@ -64,7 +64,7 @@
                 <div class="second-half">
                     <label for="fname">Second name:</label><br>
                     <input type="text" id="fname" required><br><br>
-                    <label for="femail">Age:</label><br>
+                    <label for="femail">Birth:</label><br>
                     <input type="date" id="femail" required><br><br>
                     <label for="fcompany-name">Company email:</label><br>
                     <input type="text" id="fcompany-name"><br><br><br>
