--- a/html/Connect.html
+++ b/html/Connect.html
@@ -66,8 +66,8 @@
                     <input type="text" id="fname" required><br><br>
                     <label for="femail">Birth:</label><br>
                     <input type="date" id="femail" required><br><br>
-                    <label for="fcompany-name">Company email:</label><br>
-                    <input type="text" id="fcompany-name"><br><br><br>
+                    <label for="fcompany-email">Company email:</label><br>
+                    <input type="email" id="fcompany-emial"><br><br><br>
                 </div>
 
             </form>
